@@ -1,5 +1,8 @@
 package com.googlecode.linkedlisp.functions;
 
+import java.util.Arrays;
+import java.util.List;
+
 import com.googlecode.linkedlisp.Function;
 import com.googlecode.linkedlisp.ListExpression;
 import com.googlecode.linkedlisp.NoReturnException;
@@ -7,20 +10,17 @@ import com.googlecode.linkedlisp.ResourceExpression;
 import com.googlecode.linkedlisp.State;
 import com.hp.hpl.jena.rdf.model.Resource;
 
-public class Defun implements Function {
-
-    private ListExpression params;
-
-    public void setParameters(ListExpression list) {
-        params = list;
-    }
+public class Defun extends Function {
 
     public Object evaluate(State s) throws Exception {
-        String name = params.getFirst().getValue(s).toString();
+        ListExpression params = s.getParameterList();
+        
+        String name = params.get(0).getValue().toString();
 
-        if (params.get(1) instanceof ResourceExpression) {
-            Resource classResource = (Resource)params.get(1).evaluate(s);
-            String classURI = classResource.getURI();
+        Object x = params.get(1).evaluate(s);
+        if (x instanceof Resource) {
+            Resource res = (Resource)x;
+            String classURI = res.getURI();
             String[] className = classURI.split("://");
             if (className[0].equals("java")) {
                 Class functionClass = Class.forName(className[1]);
@@ -31,15 +31,15 @@ public class Defun implements Function {
             }
         } else {
             LispFunction fn = new LispFunction();
-            fn.setParameterNames((ListExpression)params.get(1));
+            fn.setParameterNames((List<String>)x);
             fn.setBody(params.get(2));
-            s.getVariables().put(name, fn);
+            s.getGlobalVariables().put(name, fn);
         }
-        throw new NoReturnException();
+        return null;
     }
 
     @Override
-    public Object getValue(State s) {
+    public Object getValue() {
         return "defun";
     }
 
